@@ -4,9 +4,11 @@ echo1 "removing tr069 stuff"
 rm_files "${FILESYSTEM_MOD_DIR}/usr/share/ctlmgr/libtr064.so" \
 	 "${FILESYSTEM_MOD_DIR}/usr/share/ctlmgr/libtr069.so" \
 	 "${FILESYSTEM_MOD_DIR}/bin/tr069starter" \
-	 "${FILESYSTEM_MOD_DIR}/sbin/tr069discover" \
-	 "${FILESYSTEM_MOD_DIR}/usr/bin/tr069fwupdate"
+	 "${FILESYSTEM_MOD_DIR}/sbin/tr069discover"
 
+if [ "$FREETZ_REMOVE_TR069_FWUPDATE" == "y" ]; then 
+	 rm_files "${FILESYSTEM_MOD_DIR}/usr/bin/tr069fwupdate"
+fi
 echo1 "patching default tr069.cfg"
 find ${FILESYSTEM_MOD_DIR}/etc -name tr069.cfg -exec sed -e 's/enabled = yes/enabled = no/' -i '{}' \;
 
