@@ -39,6 +39,7 @@ Latest changes:
     * Fix wrong usb mounts status message in AVM webinterface (7170, 7270)
     * Add new status bar design (optional)
     * Add support for multiple printers
+    * split tr069-remove-patches 
 
 - New packages, libs, modules:
     * aiccu 20070115
